--- a/client/app1/src/data-file-table/index.css
+++ b/client/app1/src/data-file-table/index.css
@@ -2,6 +2,6 @@ div.max-width-600 {
   max-width: 700px;
 }
 
-input.download-button {
-  max-width: 180px;
+button.download-button {
+  max-width: 190px;
 }
